fix scrollbar layout shifts.

--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ textarea {
   resize: none;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   background-color: var(--dough-white);
+  scrollbar-gutter: stable;
 }
 
 kbd {
